# TopicoMAPI

./: main.py  pyproject.toml  topico_mapi.py
src/: ticket.py  user.py
src/model/: ticket.py
src/request/: ext.py  ticket.py  user.py
src/topico_api_client/: ext.py  ticket.py  user.py
