[project]
version = "0.1"
name = "topico_api_client"

dependencies = [
    "topico_api_model@git+https://github.com/TopicoTeam/topico_api_model.git",
    "requests==2.32.4"
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)